--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,12 @@ uuid = "48fd7459-ece4-4749-a1ef-32f4cf5f58ae"
 authors = ["Michele Fornino <fornino.michele@gmail.com>"]
 version = "0.1.0"
 
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MarkovChains = "006c4929-8afa-4b8c-b9b1-ffa913757d23"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+
 [compat]
 julia = "1.1"
 
